# Orchestra

./: .env.cli_example  .env.example  .gitignore  IMPLEMENTATION_COMPLETE.md  MANIFEST.in  README.md  USAGE_GUIDE.md  install.ps1  pyproject.toml
agents/: __init__.py  base.py  base_cli.py  claude_agent.py  claude_cli.py  gemini_agent.py  gemini_cli.py  generic_cli.py  openai_agent.py  openai_cli.py
config/: cli_settings.py  settings.py
dispatcher/: cli_dispatcher.py  parallel_dispatcher.py
evaluator/: cross_evaluator.py
examples/: api_client.py  cli_example.py  interactive_query.py  simple_query.py
multi_agent_coder/: cli_orchestrator.py  orchestrator.py
orchestra/: __init__.py  __main__.py  repl.py
utils/: __init__.py  backup_manager.py  cli_detector.py  code_parser.py  context_builder.py  diff_generator.py  interactive_selector.py
