[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestra-ma"
version = "1.0.0"
description = "Multi-Agent AI Coding Orchestra - Your AI coding team at your fingertips"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Orchestra Team"}
]
keywords = ["ai", "coding", "multi-agent", "cli", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]

dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/orchestra"
Repository = "https://github.com/your-username/orchestra"
Issues = "https://github.com/your-username/orchestra/issues"

[project.scripts]
orchestra = "orchestra.__main__:main"

[tool.setuptools]
packages = ["orchestra"]

[tool.setuptools.package-data]
orchestra = ["*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
asyncio_mode = "auto"
